--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,15 @@ body {
   background-color: rgba(191, 192, 191, 1);
 }
 
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+a:hover {
+  color: rgba(0, 133, 202, 1);
+}
+
 .page-header {
   width: 100%;
   padding: 7rem 0 1rem 0;
